<resources>
    <string name="app_name">Party Time</string>
    <string name="fname_text">First Name</string>
    <string name="goto_signup">Sign Up</string>
    <string name="lname_text">Last Name</string>
    <string name="email_text">E-mail Address</string>
    <string name="password_text">Password</string>
    <string name="back_text">Back</string>
    <string name="login_text">Login</string>
    <string name="num_char_password">Enter at least 6 characters</string>
    <string name="do_not_have_account">Don\'t have an account?</string>
    <string name="party_title_text">Party Title</string>
    <string name="party_description_text">Party Description</string>
    <string name="submit_party_button">Submit</string>
    <string name="party_address_text">Party Address</string>
    <string name="user_age_text">Age</string>
    <string name="byui">BYU-I</string>
    <string name="ISU">ISU</string>
    <string name="find_party">Find a party!</string>
    <string name="limitPeople">How many guests?</string>
    <string name="exampleDate">Date: ex. 12/24</string>
    <string name="exampleTime">Time: ex 8:30</string>

    <string-array name="schools_array">
        <item>BYU - Idaho</item>
        <item>Idaho State University</item>
    </string-array>
</resources>
